--- a/panels_ipe.routing.yml
+++ b/panels_ipe.routing.yml
@@ -5,3 +5,11 @@ panels_ipe.block:
   requirements:
     _permission: 'access panels in-place editing'
     _entity_access: page.view
+
+panels_ipe.layouts:
+  path: '/admin/panels_ipe/page/{page}/variant/{variant_id}/layouts'
+  defaults:
+      _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getLayouts'
+  requirements:
+    _permission: 'access panels in-place editing'
+    _entity_access: page.view
