--- a/panels_ipe.libraries.yml
+++ b/panels_ipe.libraries.yml
@@ -8,11 +8,13 @@ panels_ipe:
     js/models/BlockModel.js: {}
     js/models/RegionModel.js: {}
     js/models/TabModel.js: {}
+    js/models/LayoutModel.js: {}
     # Views.
     js/views/AppView.js: {}
     js/views/BlockView.js: {}
     js/views/RegionView.js: {}
     js/views/TabView.js: {}
+    js/views/LayoutTabView.js: {}
   css:
     component:
       css/panels_ipe.css: {}
