Support drag and drop as a method to reorder blocks.

--- a/panels_ipe.libraries.yml
+++ b/panels_ipe.libraries.yml
@@ -23,6 +23,7 @@ panels_ipe:
     - core/jquery.once
     - core/jquery.ui
     - core/jquery.ui.draggable
+    - core/jquery.ui.droppable
     - core/underscore
     - core/backbone
     - core/drupal
