--- a/panels_ipe.routing.yml
+++ b/panels_ipe.routing.yml
@@ -6,10 +6,18 @@ panels_ipe.block:
     _permission: 'access panels in-place editing'
     _method: 'GET'
 
-panels_ipe.block.plugins:
-  path: '/admin/panels_ipe/blocks'
+panels_ipe.block_plugins:
+  path: '/admin/panels_ipe/block_plugins'
   defaults:
       _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getBlockPlugins'
+  requirements:
+    _permission: 'access panels in-place editing'
+    _method: 'GET'
+
+panels_ipe.block_plugin.form:
+  path: '/admin/panels_ipe/block_plugin/{plugin_id}/form'
+  defaults:
+      _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getBlockPluginForm'
   requirements:
     _permission: 'access panels in-place editing'
     _method: 'GET'
