--- a/panels_ipe.routing.yml
+++ b/panels_ipe.routing.yml
@@ -14,10 +14,10 @@ panels_ipe.block_plugins:
     _permission: 'access panels in-place editing'
     _method: 'GET'
 
-panels_ipe.block_plugin.form:
-  path: '/admin/panels_ipe/block_plugin/{plugin_id}/form'
+panels_ipe.block_plugin:
+  path: '/admin/panels_ipe/block_plugins/{plugin_id}'
   defaults:
-      _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getBlockPluginForm'
+      _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getBlockPlugin'
   requirements:
     _permission: 'access panels in-place editing'
     _method: 'GET'
