--- a/panels_ipe.routing.yml
+++ b/panels_ipe.routing.yml
@@ -1,53 +1,60 @@
 panels_ipe.block_plugins:
-  path: '/admin/panels_ipe/variant/{variant_id}/block_plugins'
+  path: '/admin/panels_ipe/variant/{page_variant}/block_plugins'
   defaults:
       _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getBlockPlugins'
   requirements:
+    _entity_access: page_variant.read
     _permission: 'access panels in-place editing'
     _method: 'GET'
 
 panels_ipe.block_plugin.form:
-  path: '/admin/panels_ipe/variant/{variant_id}/layout/{layout_id}/block_plugins/{plugin_id}/form'
+  path: '/admin/panels_ipe/variant/{page_variant}/layout/{layout_id}/block_plugins/{plugin_id}/form'
   defaults:
       _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getBlockPluginForm'
   requirements:
+    _entity_access: page_variant.read
     _permission: 'access panels in-place editing'
 
 panels_ipe.block_plugin_existing.form:
-  path: '/admin/panels_ipe/variant/{variant_id}/layout/{layout_id}/block_plugins/{plugin_id}/block/{block_uuid}/form'
+  path: '/admin/panels_ipe/variant/{page_variant}/layout/{layout_id}/block_plugins/{plugin_id}/block/{block_uuid}/form'
   defaults:
       _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getBlockPluginForm'
   requirements:
+    _entity_access: page_variant.read
     _permission: 'access panels in-place editing'
 
 panels_ipe.layouts:
-  path: '/admin/panels_ipe/variant/{variant_id}/layouts'
+  path: '/admin/panels_ipe/variant/{page_variant}/layouts'
   defaults:
       _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getLayouts'
   requirements:
+    _entity_access: page_variant.read
     _permission: 'access panels in-place editing'
     _method: 'GET'
 
 panels_ipe.layout:
-  path: '/admin/panels_ipe/variant/{variant_id}/layouts/{layout_id}'
+  path: '/admin/panels_ipe/variant/{page_variant}/layouts/{layout_id}'
   defaults:
       _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::getLayout'
   requirements:
+    _entity_access: page_variant.read
     _permission: 'access panels in-place editing'
     _method: 'GET'
 
 panels_ipe.layout.update:
-  path: '/admin/panels_ipe/variant/{variant_id}/layouts/{layout_id}'
+  path: '/admin/panels_ipe/variant/{page_variant}/layouts/{layout_id}'
   defaults:
       _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::updateLayout'
   requirements:
+    _entity_access: page_variant.update
     _permission: 'access panels in-place editing'
     _method: 'PUT'
 
 panels_ipe.layout.save:
-  path: '/admin/panels_ipe/variant/{variant_id}/layouts/{layout_id}'
+  path: '/admin/panels_ipe/variant/{page_variant}/layouts/{layout_id}'
   defaults:
       _controller: '\Drupal\panels_ipe\Controller\PanelsIPEPageController::createLayout'
   requirements:
+    _entity_access: page_variant.update
     _permission: 'access panels in-place editing'
     _method: 'POST'
